doc: update api specs
